--- a/api-reference/endpoint/openapi-v1/text-to-prompt.mdx
+++ b/api-reference/endpoint/openapi-v1/text-to-prompt.mdx
@@ -3,3 +3,7 @@ title: "Text To Prompt"
 openapi: "POST /v1/text-to-prompt"
 description: "Generate a prompt from a text"
 ---
+
+## Pricing
+
+- **Cost**: 1 credits per request
