--- a/api-reference/endpoint/openapi-v1/image-to-prompt.mdx
+++ b/api-reference/endpoint/openapi-v1/image-to-prompt.mdx
@@ -3,3 +3,7 @@ title: "Image To Prompt"
 openapi: "POST /v1/image-to-prompt"
 description: "Generate a prompt from an image"
 ---
+
+## Pricing
+
+- **Cost**: 2 credits per request
