--- a/api-reference/quickstart.mdx
+++ b/api-reference/quickstart.mdx
@@ -19,3 +19,8 @@ X-API-KEY: your-api-key
   Keep your API key secure and never share it publicly. If you believe your API
   key has been compromised, you can generate a new one from your dashboard.
 </Note>
+
+## Base URL
+
+All API requests should be made to:
+https://api-flux.aiturboapi.com
